Added Search API using the elastic search API's